<resources>
    <string name="app_name">ToDoIsApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_entery_record">EnterRecordActivity</string>
    <string name="delete">Delete</string>
    <string name="okay">Ok</string>
    <string name="add_note">Add Note</string>
    <string name="title_activity_my_list">MyListActivity</string>
    <string name="mail">Send mail</string>
    <string name="photo">Add photo/picture</string>
    <string name="notification">Add notification</string>
    <string name="add_notification">Add Notification</string>
    <string name="cancel_notification">Cancel</string>
    <string name="editText">Enter Note Title</string>
    <string name="warning_title">Заполните поле Title</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="notification__service">У вас уведомление</string>
    <string name="edit_description">Edit description</string>
    <string name="edit_title">Edit Title</string>
    <string name="selected_elements_main_activity">"Selected: "</string>

</resources>
