<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.EnterRecordActivity">

    <item
        android:id="@+id/delete"
        android:icon="@drawable/basket"
        android:orderInCategory="2"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/ok"
        android:icon="@drawable/okay"
        android:orderInCategory="1"
        android:title="@string/okay"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu"
        android:icon="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
        android:orderInCategory="2"
        android:title="@string/okay"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/mail"
                android:icon="@drawable/mail"
                android:orderInCategory="3"
                android:title="@string/mail"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/photo"
                android:icon="@drawable/photo"
                android:orderInCategory="3"
                android:title="@string/photo"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/btnNotification"
                android:icon="@drawable/notifications_white_36dp"
                android:orderInCategory="3"
                android:title="@string/notification"
                app:showAsAction="ifRoom" />
        </menu>
    </item>


</menu>
